# fblade-nvim-config

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
nvim/lua/core/: keymaps.lua  options.lua  plugins.lua
nvim/lua/plugins/: autopairs.lua  cmp.lua  lspconfig.lua  lualine.lua  nvimtree.lua  telescope.lua  treesitter.lua
src/nvim/: init.lua  lazy-lock.json
src/nvim/lua/core/: keymaps.lua  plugins.lua
src/nvim/lua/plugins/: codecompanion.lua  conform.lua  lspconfig.lua  lualine.lua  octo.lua
src/nvim/lua/themes/: crimson.lua
src/p10k/: .p10k.zsh
src/tmux/: .tmux.conf
tmux/: .tmux.conf
zsh/: .zshrc
