[tool.poetry]
name = "fblade-config-nvim"
version = "0.1.0"
description = "Configuration files for tmux, p10k, zsh and nvim."
authors = ["Fblade (lucas.toirkens@gmail.com)"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
attrs = "25.3.0"
basedpyright = "1.29.1"
cattrs = "24.1.3"
docstring-to-markdown = "0.17"
importlib-metadata = "8.7.0"
jedi = "0.19.2"
lsprotocol = "2023.0.1"
nodejs-wheel-binaries = "22.15.0"
packaging = "25.0"
parso = "0.8.4"
pluggy = "1.5.0"
pygls = "1.3.1"
python-lsp-jsonrpc = "1.1.2"
python-lsp-server = "1.12.2"
ruff = "0.11.8"
ruff-lsp = "0.0.62"
typing-extensions = "4.13.2"
ujson = "5.10.0"
zipp = "3.21.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fblade-config-nvim"
version = "0.1.0"
description = "Configuration files for tmux, p10k, zsh and nvim."
authors = [{name = "Fblade", email = "lucas.toirkens@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "attrs==25.3.0",
    "basedpyright==1.29.1",
    "cattrs==24.1.3",
    "docstring-to-markdown==0.17",
    "importlib-metadata==8.7.0",
    "jedi==0.19.2",
    "lsprotocol==2023.0.1",
    "nodejs-wheel-binaries==22.15.0",
    "packaging==25.0",
    "parso==0.8.4",
    "pluggy==1.5.0",
    "pygls==1.3.1",
    "python-lsp-jsonrpc==1.1.2",
    "python-lsp-server==1.12.2",
    "ruff==0.11.8",
    "ruff-lsp==0.0.62",
    "typing-extensions==4.13.2",
    "ujson==5.10.0",
    "zipp==3.21.0"
]

[tool.setuptools.packages]
find = { where = ["src"] }

